--- a/freelancer/freelancer/package.json
+++ b/freelancer/freelancer/package.json
@@ -4,20 +4,27 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-alpha.6",
     "expr-eval": "^1.2.1",
     "express": "^4.16.2",
     "foreman": "^2.0.0",
     "marked": "^0.3.16",
+    "mocha": "^5.0.4",
     "mongoose": "^5.0.7",
+    "multer": "^1.3.0",
+    "multiparty": "^4.1.3",
     "mysql": "^2.15.0",
     "nodemon": "^1.15.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-password-strength-meter": "^1.0.5",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
     "uuid": "^3.2.1"
   },
   "scripts": {
@@ -26,5 +33,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.4.1"
   }
 }
